--- a/app/views/gifs/index.html.haml
+++ b/app/views/gifs/index.html.haml
@@ -5,8 +5,9 @@
 - @gifs.each do |gif|
   = gif.name
   = image_tag gif.file
-  = link_to 'Edit', edit_gif_path(gif)
-  = link_to 'Delete', gif, method: :delete, data: { confirm: 'Are you sure?' }
+  - if user_signed_in? && current_user.id == gif.user_id
+    = link_to 'Edit', edit_gif_path(gif)
+    = link_to 'Delete', gif, method: :delete, data: { confirm: 'Are you sure?' }
 
 
 = pagy_nav(@pagy).html_safe
