--- a/app/views/gifs/_form.html.haml
+++ b/app/views/gifs/_form.html.haml
@@ -17,5 +17,12 @@
   %div
     = f.label :description
     = f.text_field :description
+
+  %div
+    = f.label :tags
+    = f.select :tag_list, options_for_select(ActsAsTaggableOn::Tag.all.map { |tag| [tag.name, tag.name] }, gif.tag_list), {}, { multiple: true }
   %div
     = f.submit
+
+:javascript
+  $( "#gif_tag_list" ).select2()
