--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -8,6 +8,7 @@
     = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload'
     %link{:href => "https://cdn.simplecss.org/simple-v1.css", :rel => "stylesheet"}/
     = javascript_pack_tag 'application', 'data-turbolinks-track': 'reload'
+    = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
   %body
     - if user_signed_in?
       = link_to 'Logout', destroy_user_session_path, method: :delete
