--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -11,6 +11,9 @@
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
   %body
     - if user_signed_in?
+      = link_to 'Home', root_path
+      = link_to 'My Gifs', my_gifs_path
+      = link_to 'New gif', new_gif_path
       = link_to 'Logout', destroy_user_session_path, method: :delete
     - else
       = link_to 'Login', new_user_session_path
